--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "sass": "^1.81.0",
     "web-vitals": "^2.1.4"
