change the way to debug

--- a/src/docker-compose.debug.backend.postman.yml
+++ b/src/docker-compose.debug.backend.postman.yml
@@ -7,12 +7,12 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - mongo-dev-data:/data/db
     networks:
       - backend-network
 
 volumes:
-  mongo-data:
+  mongo-dev-data:
 
 networks: 
   backend-network: 
