--- a/src/docker-compose.debug.all.yml
+++ b/src/docker-compose.debug.all.yml
@@ -1,22 +1,6 @@
 version: '3.8'
 
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: backend_app
-    environment:
-      - NODE_ENV=development
-      - NODE_PORT=3000
-      - MONGO_URI=mongodb://mongo:27017/development_db
-    ports:
-      - "3000:3000"
-    depends_on:
-      - mongo
-    networks:
-      - backend-network
-
   mongo:
     image: mongo:latest
     container_name: mongo_db
@@ -33,6 +17,8 @@ services:
     ports:
       - "8081:8081"
     environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
       - ME_CONFIG_MONGODB_SERVER=mongo
     depends_on:
       - mongo
