--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,17 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug Frontend - chrome",
+      "request": "launch",
+      "type": "chrome",
+      "url": "http://localhost:3002",
+      "webRoot": "${workspaceFolder}/src/frontend"
+    },
+    {
       "type": "msedge",
       "request": "launch",
-      "name": "Debug Frontend",
-      "url": "http://localhost:3001",
+      "name": "Debug Frontend - edge",
+      "url": "http://localhost:3002",
       "webRoot": "${workspaceFolder}/src/frontend"
     },
     {
