--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,16 +7,28 @@ services:
       dockerfile: Dockerfile
     container_name: backend_app
     environment:
-    - NODE_ENV=production 
-    - NODE_PORT=3000
-    - MONGO_URI=mongodb://mongo:27017/production_db
+      - NODE_ENV=production
+      - NODE_PORT=3000
+      - MONGO_URI=mongodb://mongo:27017/production_db
     ports:
       - "3000:3000"
     depends_on:
       - mongo
     networks:
       - backend-network
-      
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend_app
+    ports:
+      - "3003:80"
+    depends_on:
+      - backend
+    networks:
+      - backend-network
+
   mongo:
     image: mongo:latest
     container_name: mongo_db
@@ -30,7 +42,7 @@ services:
 volumes:
   mongo-data:
 
-networks: 
-  backend-network: 
+
+networks:
+  backend-network:
     driver: bridge
-  
