ensure create the right container to the app dev and prod

--- a/src/docker-compose.debug.frontend.yml
+++ b/src/docker-compose.debug.frontend.yml
@@ -17,6 +17,9 @@ services:
     networks:
       - backend-network
 
+  frontend:
+    entrypoint: /bin/true
+
   mongo:
     image: mongo:latest
     container_name: mongo_db
