--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -1,8 +1,12 @@
-events {}
+user nginx;
+
+events {
+}
 
 http {
   server {
     listen 80;
+    listen [::]:80;
 
     server_name localhost;
 
@@ -14,6 +18,11 @@ http {
 
     location /static/ {
       alias /usr/share/nginx/html/static/;
+    }
+
+    location ~* \.(css|js)$ {
+      root /usr/share/nginx/html;
+      add_header Content-Type $content_type;
     }
   }
 }
