--- a/src/docker-compose.debug.all.yml
+++ b/src/docker-compose.debug.all.yml
@@ -1,15 +1,14 @@
 version: '3.8'
 
 services:
+  backend:
+    entrypoint: /bin/true
+
+  frontend:
+    entrypoint: /bin/true
+
   mongo:
-    image: mongo:latest
-    container_name: mongo_db
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-dev-data:/data/db
-    networks:
-      - backend-network
+    container_name: mongo_dev_db
 
   mongo-express:
     image: mongo-express:latest
@@ -17,8 +16,6 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
       - ME_CONFIG_MONGODB_SERVER=mongo
     depends_on:
       - mongo
@@ -26,7 +23,7 @@ services:
       - backend-network
 
 volumes:
-  mongo-dev-data:
+  mongo-data:
 
 
 networks:
