add home details and adjust containers
add font-awsome

add screenshots

--- a/src/docker-compose.debug.all.yml
+++ b/src/docker-compose.debug.all.yml
@@ -9,6 +9,8 @@ services:
 
   mongo:
     container_name: mongo_dev_db
+    volumes:
+      - mongo-dev-data:/data/db
 
   mongo-express:
     image: mongo-express:latest
@@ -23,7 +25,7 @@ services:
       - backend-network
 
 volumes:
-  mongo-data:
+  mongo-dev-data:
 
 
 networks:
