--- a/src/docker-compose.debug.frontend.yml
+++ b/src/docker-compose.debug.frontend.yml
@@ -1,34 +1,13 @@
 version: '3.8'
 
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: backend_app
-    environment:
-      - NODE_ENV=development
-      - NODE_PORT=3000
-      - MONGO_URI=mongodb://mongo:27017/development_db
-    ports:
-      - "3000:3000"
-    depends_on:
-      - mongo
-    networks:
-      - backend-network
-
   frontend:
     entrypoint: /bin/true
 
   mongo:
-    image: mongo:latest
-    container_name: mongo_db
-    ports:
-      - "27017:27017"
+    container_name: mongo_dev_db
     volumes:
       - mongo-dev-data:/data/db
-    networks:
-      - backend-network
 
   mongo-express:
     image: mongo-express:latest
@@ -46,6 +25,3 @@ volumes:
   mongo-dev-data:
 
 
-networks:
-  backend-network:
-    driver: bridge
